<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/general_padding">


    <EditText
        android:id="@+id/submit_dialog_text_view_title"
        style="@style/TitleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/submit_dialog_text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textPersonName|textCapSentences|textMultiLine"
        android:lines="8" />

    <EditText
        android:id="@+id/submit_dialog_text_view_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_url"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/submit_dialog_image_preview"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        tools:layout_width="100dp"
        android:layout_height="115dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_dialog_btn_draft"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:text="@string/draft" />

        <Button
            android:id="@+id/submit_dialog_btn_publish"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:text="@string/publish" />
    </LinearLayout>


</LinearLayout>